# memo-words

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Info.plist  LICENSE-APACHE  LICENSE-MIT  README.md  architecture.md  config.example.conf  deny.toml  recommendation.md  seed_words.js
.github/workflows/: build.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN_IDEAS.md  RECOMMENDATION.md
scripts/: verify_docs.sh
src/: app.rs  command.rs  config.rs  db.rs  deck.rs  diagnostics.rs  fallback.rs  loading.rs  main.rs  model.rs  platform.rs  selector.rs  session.rs  source.rs  store.rs  theme.rs  timing.rs  tray.rs  ui.rs  wake.rs
src/config/: parser.rs  path.rs  tests.rs
src/source/: controller.rs  mongo.rs  report.rs  static_source.rs
src/timing/: easing.rs  pacing.rs  repaint.rs  timeline.rs
src/ui/: card.rs  foundation.rs  surface.rs  text.rs
