[package]
name = "memo-words"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["wgpu", "default_fonts"] }
tray-icon = "0.24"
muda = "0.19"
rand = "0.10"
mongodb = "3"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
