[package]
name = "memo-words"
version = "0.2.0"
edition = "2024"
description = "An ambient vocabulary overlay: a small always-on-top, click-through card that teaches you words passively while you work."
authors = ["Denis Mezhov"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/themoretheless/memo-words"
readme = "README.md"
keywords = ["vocabulary", "language-learning", "overlay", "macos"]

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
tray-icon = "0.24"
muda = "0.19"
rand = "0.10"
mongodb = "3"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
